# selected_points_publisher

./: CMakeLists.txt  package.xml  plugin_description.xml
include/selected_points_publisher/: selected_points_publisher.hpp
src/: selected_points_publisher.cpp
